|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
25 Jun 2015, PHP 7.0.0 Alpha 2

- Core:
  . Fixed bug #69823 (PHP 7.0.0alpha1 segmentation fault when exactly 33
    extensions are loaded). (Laruence)
  . Fixed bug #69805 (null ptr deref and seg fault in zend_resolve_class_name).
    (Laruence)
  . Fixed bug #69761 (Serialization of anonymous classes should be prevented).
    (Laruence)
  . Fixed bug #69551 (parse_ini_file() and parse_ini_string() segmentation
    fault). (Christoph M. Becker)
  . Fixed bug #69781 (phpinfo() reports Professional Editions of Windows
    7/8/8.1/10 as "Business"). (Christian Wenz)

- mysqlnd:
  . Fixed Bug #69796 (mysqli_stmt::fetch doesn't assign null values to
    bound variables). (Laruence);

- Curl:
  . Fixed bug #69831 (Segmentation fault in curl_getinfo). (im dot denisenko at
    yahoo dot com)

- Opcache:
  . Removed opcache.load_comments configuration directive. Now doc comments
    loading costs nothing and always enabled. (Dmitry)

- PDO_pgsql:
  . Fixed bug #69752 (PDOStatement::execute() leaks memory with DML
    Statements when closeCuror() is u). (Philip Hofstetter)

11 Jun 2015, PHP 7.0.0 Alpha 1

- Core:
  . Fixed bug #69767 (Default parameter value with wrong type segfaults).
    (cmb, Laruence)
  . Fixed bug #69756 (Fatal error: Nesting level too deep - recursive dependency
    ? with ===). (Dmitry, Laruence)
  . Fixed bug #69758 (Item added to array not being removed by array_pop/shift
    ). (Laruence)
  . Fixed bug #68475 (Add support for $callable() sytnax with 'Class::method').
    (Julien, Aaron Piotrowski)
  . Fixed bug #69485 (Double free on zend_list_dtor). (Laruence)
  . Fixed bug #69427 (Segfault on magic method __call of private method in 
    superclass). (Laruence)
  . Improved __call() and __callStatic() magic method handling. Now they are
    called in a stackless way using ZEND_CALL_TRAMPOLINE opcode, without
    additional stack frame. (Laruence, Dmitry)